--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="#">
                     Pagina Inicial
                 </a>
-                <a href="#">
+                <a href="https://italowillian.github.io/curr-culo/">
                     Currículo
                 </a>
                 <a href="#">
