--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                     Quo ullam sapiente quis voluptatem dolores quia consequatur,
                     tempore rem, corporis unde laboriosam sunt deleniti ab officia tenetur quos dolorem dolor error!</p>
                 <h3>Aprendizagem</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                 Dolorem exercitationem nemo omnis,
-                 delectus sapiente nulla placeat? Nobis, numquam unde.
-                 Dicta eius veniam error ipsam esse, quam maxime aut iusto! Illo?</p>
+                <p>Atualmente estou cursando Tecnico em Desenvolvimento de Sistemas no SENAI,
+                   já conclui um curso de Informática Básica no CEBRAC e no CEFET de introdução ao Html, CSS e javascript (Enxurrada de bits).
+                   Sou uma pessoa calma, responsável, tenho uma grande facilidade de aprendizagem e vontade de aprender e crescer profissionalmente cada vez mais.
+                   Gosto de tocar Violão, cavaquinho e pandeiro.</p>
             </div>
         </section>
     </main>
