--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
             <img src="img/foto.jpg" >
             <div class="conteudo-principal">
                 <h2>Conhecimento</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Quo ullam sapiente quis voluptatem dolores quia consequatur,
-                    tempore rem, corporis unde laboriosam sunt deleniti ab officia tenetur quos dolorem dolor error!</p>
+                <p>Tenho conhecimento em Html, CSS, Python basico, Excel, Word e Powerpoint.</p>
                 <h3>Aprendizagem</h3>
                 <p>Atualmente estou cursando Tecnico em Desenvolvimento de Sistemas no SENAI,
                    já conclui um curso de Informática Básica no CEBRAC e no CEFET de introdução ao Html, CSS e javascript (Enxurrada de bits).
