--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <h2>Conhecimento</h2>
                 <p>Tenho conhecimento em Html, CSS, Python basico, Excel, Word e Powerpoint.</p>
                 <h3>Aprendizagem</h3>
-                <p>Atualmente estou cursando Tecnico em Desenvolvimento de Sistemas no SENAI,
+                <p>Atualmente estou cursando Tecnico em Desenvolvimento de Sistemas no SENAI.
                    já conclui um curso de Informática Básica no CEBRAC e no CEFET de introdução ao Html, CSS e javascript (Enxurrada de bits).
                    Sou uma pessoa calma, responsável, tenho uma grande facilidade de aprendizagem e vontade de aprender e crescer profissionalmente cada vez mais.
                    Gosto de tocar Violão, cavaquinho e pandeiro.</p>
